test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-oknil-shared.good
init-field-dflt-nonnil-shared-from-oknil-shared.chpl:11: error: Cannot initialize 'shared MyClass' from a 'shared MyClass?'
